# esgfng-monitor

./: .env.testonly  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20250610_0001_create_healthcheck_results.py  20250610_0002_drop_time_pretransfer.py
config/: crontab.example  monitor.env.example  nginx.conf.example  supervisor.conf.example
src/: config.py  db.py  models.py  monitor.py  probe.py
src/esgfng_monitor/: __init__.py  __main__.py  config.py  db.py  monitor.py  probe.py
src/templates/: base.html  index.html  target.html
src/web/: __init__.py  app.py  queries.py
