[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "esgfng-monitor"
version = "0.1.0"
description = "ESGF-NG Core Services Monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
esgfng-monitor = "monitor:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config", "db", "models", "monitor", "probe"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["web*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html"]
